--- a/estilos.css
+++ b/estilos.css
@@ -24,6 +24,7 @@ body{
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
+        align-items: baseline;
     }
 
     .navBarLista{
