--- a/estilos.css
+++ b/estilos.css
@@ -104,6 +104,22 @@ body{
         padding-left: 9px;
     }
 
+    .descripcionBoton{
+        background-color: white;
+        border-radius: 2px;
+        padding: 2px;
+        margin-left: 7px;
+        opacity: 65%;
+    }
+
+    .descripcionTexto{
+        margin: 9px;
+        padding: 5px;
+        opacity: 65%;
+        border: 0.5px solid rgb(189, 189, 189);
+        border-radius: 3px;
+    }
+
     /* PIE DE PAGINA */
 
     .piePagina{
