--- a/estilos.css
+++ b/estilos.css
@@ -71,6 +71,10 @@ body{
         margin-bottom: 5px;
     }
 
+    .divLista {
+        position: relative;
+    }
+
     .divLista li{
         padding-left: 7px;
         padding-bottom: 3px;
@@ -78,6 +82,7 @@ body{
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
+        z-index: 1;
     }
 
     .divLista li span{
@@ -104,12 +109,19 @@ body{
         padding-left: 9px;
     }
 
+    .divProducto{
+        height: 30px;
+    }
+
     .descripcionBoton{
         background-color: white;
         border-radius: 2px;
         padding: 2px;
         margin-left: 7px;
         opacity: 65%;
+        position: relative;
+        top: -29px;
+        left: 325px;
     }
 
     .descripcionTexto{
@@ -118,6 +130,9 @@ body{
         opacity: 65%;
         border: 0.5px solid rgb(189, 189, 189);
         border-radius: 3px;
+        position: relative;
+        top: -30px;
+        z-index: 2;
     }
 
     /* PIE DE PAGINA */
