--- a/estilos.css
+++ b/estilos.css
@@ -125,10 +125,10 @@ body{
     }
 
     .descripcionTexto{
-        margin: 9px;
+        margin: 8px;
         padding: 5px;
-        opacity: 65%;
         border: 0.5px solid rgb(189, 189, 189);
+        background-color: rgb(255, 255, 255, 1);
         border-radius: 3px;
         position: relative;
         top: -30px;
