--- a/estilos.css
+++ b/estilos.css
@@ -14,7 +14,7 @@ body{
     color: black;
 }
 
-@media(max-width: 576px){
+/* @media(max-width: 576px){ */
 
     /* NAVBAR */
 
@@ -25,6 +25,7 @@ body{
         flex-wrap: wrap;
         justify-content: center;
         align-items: baseline;
+        margin-bottom: 10px;
     }
 
     .navBarLista{
@@ -60,7 +61,7 @@ body{
         flex-direction: column;
     }
 
-    .menu div{
+    .menu div div{
         margin-bottom: 10px;
     }
 
@@ -68,7 +69,7 @@ body{
         padding: 5px;
         text-decoration: underline black;
         text-align: center;
-        margin-bottom: 5px;
+        margin-bottom: 23px;
     }
 
     .divLista {
@@ -80,7 +81,7 @@ body{
         padding-bottom: 3px;
         display: flex;
         flex-direction: row;
-        align-items: center;
+        align-items: flex-start;
         justify-content: space-between;
         z-index: 1;
     }
@@ -109,6 +110,10 @@ body{
         padding-left: 9px;
     }
 
+    .divCocina{
+        margin-bottom: 20px;
+    }
+
     .divProducto{
         height: 30px;
     }
@@ -128,12 +133,13 @@ body{
         margin: 8px;
         padding: 5px;
         border: 0.5px solid rgb(189, 189, 189);
-        background-color: rgb(255, 255, 255, 1);
+        background-color: rgb(247 247 247);
         border-radius: 3px;
         position: relative;
         top: -30px;
         z-index: 2;
     }
+
 
     /* PIE DE PAGINA */
 
@@ -154,5 +160,5 @@ body{
         margin-top: 10px;
         margin-bottom: 10px;
     }
-}
+/* } */
 
