--- a/estilos.css
+++ b/estilos.css
@@ -143,7 +143,7 @@ body{
     /* PIE DE PAGINA */
 
     .piePagina{
-        background-color: #492200;
+        background-color: #391b00;
         color: white;
         padding: 10px;
         margin-top: 15px;
