--- a/estilos.css
+++ b/estilos.css
@@ -132,8 +132,7 @@ body{
 
     .descripcionTexto{
         padding: 5px;
-        border: 0.5px solid rgb(189, 189, 189);
-        background-color: rgb(247 247 247);
+        background-color: #dfcfb5;
         border-radius: 8px;
         position: relative;
         z-index: 2;
