--- a/estilos.css
+++ b/estilos.css
@@ -15,149 +15,156 @@ body{
     color: white;
 }
 
-/* @media(max-width: 576px){ */
+/* NAVBAR */
 
-    /* NAVBAR */
+.navBar{
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: baseline;
+    margin-bottom: 10px;
+}
+
+.navBarLista{
+    display: flex;
+    flex-direction: row;
+    margin-left: 7px;
+}
+
+.navBarLista li{
+    list-style: none;
+    padding-top: 10px;
+    padding-right: 10px;
+}
+
+.navBarLista li a{
+    text-decoration: none; 
+    padding: 3px;
+    border: solid 1px white;
+    border-radius: 3px;
+    color: white;
+}
+
+.navBarLista li a:hover{
+    background-color: white;
+    color: black;
+    transition: 1.5s;
+}
+
+/* MENU */
+
+.menu{
+    display: flex;
+    flex-direction: column;
+}
+
+.menu div div{
+    margin-bottom: 10px;
+}
+
+.menu div h4{
+    padding: 5px;
+    text-decoration: underline white;
+    text-align: center;
+    margin-bottom: 23px;
+    font-weight: 500;
+}
+
+.divProducto {
+    position: relative;
+    padding-left: 7px;
+    padding-right: 7px;
+    padding-bottom: 3px;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    height: 30px;
+}
+
+.divBakerySalado{
+    margin-bottom: none;
+}
+
+.divBakeryDulce h5{
+    padding-left: 7px;
+}
+
+.divBakeryDulce ul{
+    padding-left: 9px;
+}
+
+.divBakerySalado h5{
+    padding-left: 7px;
+}
+
+.divBakerySalado ul{
+    padding-left: 9px;
+}
+
+.divCocina{
+    margin-bottom: 20px;
+}
+
+.subrayado{
+    text-decoration: underline solid 1px white;
+    text-underline-offset: 2px;
+}
+
+.descripcionBoton{
+    background-color: white;
+    border-radius: 2px;
+    padding: 2px;
+    margin-left: 7px;
+    opacity: 65%;
+    position: relative;
+    top: -29px;
+    left: 325px;
+}
+
+.descripcionTexto{
+    padding: 5px;
+    background-color: #dfcfb5;
+    color: #755500;
+    border-radius: 8px;
+    position: relative;
+    z-index: 2;
+}
+
+
+/* PIE DE PAGINA */
+
+.piePagina{
+    background-color: #391b00;
+    color: white;
+    padding: 10px;
+    margin-top: 15px;
+}
+
+.piePaginaFotos{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.piePaginaTexto{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+@media(min-width: 720px) {
+    .menu{
+        align-items: center;
+    }
+    
+    .menu div{
+        width: 373px;
+    }
 
     .navBar{
-        padding: 10px;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: baseline;
-        margin-bottom: 10px;
+        margin-left: 21px;
     }
-
-    .navBarLista{
-        display: flex;
-        flex-direction: row;
-        margin-left: 7px;
-    }
-
-    .navBarLista li{
-        list-style: none;
-        padding-top: 10px;
-        padding-right: 10px;
-    }
-
-    .navBarLista li a{
-        text-decoration: none; 
-        padding: 3px;
-        border: solid 1px white;
-        border-radius: 3px;
-        color: white;
-    }
-
-    .navBarLista li a:hover{
-        background-color: white;
-        color: black;
-        transition: 1.5s;
-    }
-
-    /* MENU */
-
-    .menu{
-        display: flex;
-        flex-direction: column;
-    }
-
-    .menu div div{
-        margin-bottom: 10px;
-    }
-
-    .menu div h4{
-        padding: 5px;
-        text-decoration: underline white;
-        text-align: center;
-        margin-bottom: 23px;
-        font-weight: 500;
-    }
-
-    .divProducto {
-        position: relative;
-        padding-left: 7px;
-        padding-right: 7px;
-        padding-bottom: 3px;
-        display: flex;
-        flex-direction: row;
-        align-items: flex-start;
-        justify-content: space-between;
-        flex-wrap: wrap;
-    }
-
-    .divBakerySalado{
-        margin-bottom: none;
-    }
-
-    .divBakeryDulce h5{
-        padding-left: 7px;
-    }
-
-    .divBakeryDulce ul{
-        padding-left: 9px;
-    }
-
-    .divBakerySalado h5{
-        padding-left: 7px;
-    }
-
-    .divBakerySalado ul{
-        padding-left: 9px;
-    }
-
-    .divCocina{
-        margin-bottom: 20px;
-    }
-
-    .divProducto{
-        height: 30px;
-    }
-
-    .subrayado{
-        text-decoration: underline solid 1px white;
-        text-underline-offset: 2px;
-    }
-
-    .descripcionBoton{
-        background-color: white;
-        border-radius: 2px;
-        padding: 2px;
-        margin-left: 7px;
-        opacity: 65%;
-        position: relative;
-        top: -29px;
-        left: 325px;
-    }
-
-    .descripcionTexto{
-        padding: 5px;
-        background-color: #dfcfb5;
-        color: #755500;
-        border-radius: 8px;
-        position: relative;
-        z-index: 2;
-    }
-
-
-    /* PIE DE PAGINA */
-
-    .piePagina{
-        background-color: #391b00;
-        color: white;
-        padding: 10px;
-        margin-top: 15px;
-    }
-
-    .piePaginaFotos{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-    }
-
-    .piePaginaTexto{
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
-/* } */
-
+}
